# Travel-Planner-agentic-ai

./: .env.example  .gitignore  pyproject.toml  requirements.txt
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
scripts/: setup.sh
src/agents/: base.py  clarification.py  critic.py  food_culture.py  geography.py  planner.py  research.py  transport_budget.py  transport_scraper.py
src/api/: main.py
src/api/routes/: planning.py
src/cache/: browser_cache.py  transport_cache.py
src/cli/: main.py
src/config/: constants.py  settings.py
src/graph/: edges.py  nodes.py  workflow.py
src/models/: agent_outputs.py  itinerary.py  restaurant_reviews.py  state.py  transport_price.py
src/tools/: google_api.py
src/tools/browser/: browser_manager.py  playwright_tools.py  restaurant_review_tools.py  transport_scrapers.py
tests/: conftest.py
tests/unit/: test_models.py
